workspace = { members = [ "src/bin/hhzx_cors","src/bin/hhzx_log"] }

[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
dotenv = "0.15.0"
serde_json = "1.0.116"
# 日志
hhzx_log = {path = "src/bin/hhzx_log"}
# 跨域
hhzx_cors = {path = "src/bin/hhzx_cors"}
# orm
sea-orm = { version = "0.12.15", features = [ "sqlx-mysql","runtime-tokio-rustls", "macros" ] }
log = "0.4.21"
serde = { version = "1.0.198", features = ["derive"] }
