workspace = { members = [ "src/bin/hhzx_log"] }

[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["macros", "multipart"] }
axum-server = { version = "0.6.0", features = ["tls-rustls"] }
tokio = { version = "1.37.0", features = ["full"] }
tower = "0.4.13"
dotenv = "0.15.0"
serde_json = "1.0.116"
# 日志
hhzx_log = {path = "src/bin/hhzx_log"}
# orm
sea-orm = { version = "0.12.15", features = [ "sqlx-mysql","runtime-tokio-rustls", "macros", "debug-print", "with-chrono" ] }
chrono = "0.4.38"
log = "0.4.21"
env_logger = "0.11.3"
tracing-subscriber = "0.3.18"
tracing = "0.1.40"
serde = { version = "1.0.198", features = ["derive"] }
# 跨域
tower-http = { version = "0.5.2", features = ["full"] }
# jwt
jsonwebtoken = "9.3.0"
# 分布式id生成
nanoid = "0.4.0"
http = "1.1.0"

